--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.0.2",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "cesium": "^1.57.0",
     "classnames": "^2.2.6",
+    "craco-cesium": "^1.0.0",
     "history": "^4.9.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
@@ -13,12 +16,13 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "resium": "^1.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
