--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
