--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "recompose": "^0.30.0",
-    "resium": "^1.4.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
+    "redux-observable": "^1.1.0",
+    "resium": "^1.4.1",
+    "rxjs": "^6.5.1"
   },
   "scripts": {
     "start": "craco start",
