--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "pg": "^7.10.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "socket.io": "^2.2.0"
   }
 }
